<resources>
    <string name="app_name">Bootcamp_Final</string>
    <string name="welcome">Welcome to \n GDSC Bootcamp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="please_enter_all_fields">Please Enter All Fields</string>
    <string name="wel">Welcome,</string>
</resources>