<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroun_splash"
    tools:context=".SignUp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="20dp"

        android:textColor="@color/white"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_all_fields"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"

        android:textColor="@color/signupcolor"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/first_name"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="text"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/last_name"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="text"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="text"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:layout_marginTop="40dp"
        />

</LinearLayout>