<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_splash"
    tools:context=".Login">

    <ImageView
        android:layout_width="162dp"
        android:layout_height="146dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_image"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"

        android:textColor="@color/white"
        android:textSize="40sp"/>

<EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/username"
    android:layout_marginBottom="20dp"
    android:textColorHint="@color/white"
    android:paddingStart="10dp"
    android:inputType="text"
    tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/don_t_have_an_account"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:layout_marginTop="50dp"
    />

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>